# ppa

./: .gitignore  Cargo.toml  Dockerfile  InRelease  Justfile  Packages  README.md  Release  Release.gpg  action.yml  ags_1.8.2_amd64.deb  appstream-data-pop-icons-hidpi_0.0.3_all.deb  appstream-data-pop-icons_0.0.3_all.deb  appstream-data-pop_0.0.3_all.deb  apt-listbugs-rs_0.1.0-1722178859_amd64.deb  apt-listbugs-rs_0.1.0-1722881879_amd64.deb  aquamarine_0.3.0_amd64.deb  aquamarine_0.3.1_amd64.deb  aquamarine_0.3.2_amd64.deb  aquamarine_0.3.3_amd64.deb  aquamarine_0.4.0_amd64.deb  aquamarine_0.4.1_amd64.deb  aquamarine_0.4.2_amd64.deb  aquamarine_0.4.3_amd64.deb  aquamarine_0.4.4_amd64.deb  aquamarine_0.5.0_amd64.deb  aquamarine_0.5.1_amd64.deb  aquamarine_0.7.0_amd64.deb  aquamarine_0.7.1_amd64.deb  aquamarine_0.7.2_amd64.deb  aquamarine_0.8.0-1_amd64.deb  aquamarine_0.8.0_amd64.deb  bzmenu.toml  bzmenu_0.2.0_amd64.deb  bzmenu_0.2.1_amd64.deb  caps-lock-daemon.toml  commentary_0.1.0-1704714866_amd64.deb  commentary_0.1.0-1704727276_amd64.deb  commentary_0.1.0-1704901592_amd64.deb  commentary_0.1.0-1704905129_amd64.deb  (+434 more)
apt/: ppa.source
files/: goatcounter.service
fonts/: fonts-adwaita-mono-nerd.toml  fonts-apple-color-emoji.toml  fonts-inter-variable-nerd.toml  patch-inter.sh
gpg/: gpg-key.conf  public.gpg
hypr/: aquamarine.toml  full.list  hyprcursor.toml  hyprgraphics.toml  hyprland-plugins.toml  hyprland-protocols.toml  hyprland-qt-support.toml  hyprland-qtutils.toml  hyprland.toml  hyprlang.toml  hyprlock.toml  hyprpolkitagent.toml  hyprsunset.toml  (+20 more)
(+68 files in other folders)
