[package]
name = "build-deb-package"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
anstyle = "1.0"
upon = { version = "0.9", default-features = false, features = ["serde"] }
anyhow = "1"
